<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/grid_size_half">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.dyvoker.androidresume.ui.ProjectView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:projectName="@string/prj_android_resume"
                app:projectDescription="@string/prj_android_resume_desc"
                app:goToButtonText="@string/prj_go_to_git"
                app:url="@string/prj_android_resume_git"/>

            <com.dyvoker.androidresume.ui.ProjectView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:projectName="@string/prj_canvas_test"
                app:projectDescription="@string/prj_canvas_test_desc"
                app:goToButtonText="@string/prj_go_to_git"
                app:url="@string/prj_canvas_test_git"/>

            <com.dyvoker.androidresume.ui.ProjectView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:projectName="@string/prj_mars_terraforming"
                app:projectDescription="@string/prj_mars_terraforming_desc"
                app:goToButtonText="@string/prj_go_to_market"
                app:url="@string/prj_mars_terraforming_market"/>

            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
