<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/grid_size_half">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/educationText"
                        android:text="@string/education"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/educationDescription"
                        app:iconBeforeText="@drawable/school"
                        app:text="@string/education_description"
                        android:layout_marginTop="@dimen/grid_size"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/jobsText"
                        android:text="@string/jobs"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/grid_size">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/connectiveGamesImageView"
                            app:srcCompat="@drawable/logo_connective_games"
                            android:layout_weight="0"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/connectiveGamesTitleText"
                            android:text="@string/connective_games_title"
                            android:layout_weight="0"
                            android:layout_gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/grid_size_half"
                            android:layout_marginStart="@dimen/grid_size_half"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/connectiveGamesDatesText"
                        android:text="@string/connective_games_dates"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/textColorSecondary"
                        android:gravity="right"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cGJobDescriptionText"
                        android:text="@string/connective_games_job_description"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/skills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/hobbiesText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_java7"
                        app:iconBeforeText="@drawable/coffee"
                        app:text="@string/skl_java7"
                        android:layout_marginTop="@dimen/grid_size"/>


                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_oop"
                        app:iconBeforeText="@drawable/lightbulb"
                        app:text="@string/skl_oop"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_android_sdk"
                        app:iconBeforeText="@drawable/android"
                        app:text="@string/skl_android_sdk"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_material_design"
                        app:iconBeforeText="@drawable/palette"
                        app:text="@string/skl_material_design"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_russian"
                        app:iconBeforeText="@drawable/dictionary"
                        app:text="@string/skl_russian"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_english"
                        app:iconBeforeText="@drawable/dictionary"
                        app:text="@string/skl_english"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_qt"
                        app:iconBeforeText="@drawable/logo_qt"
                        app:text="@string/skl_qt"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_unity"
                        app:iconBeforeText="@drawable/logo_unity"
                        app:text="@string/skl_unity"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/skl_web"
                        app:iconBeforeText="@drawable/web"
                        app:text="@string/skl_web"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
