<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/grid_size_half">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/personalText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_information"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/grid_size">

                        <ImageView
                            android:id="@+id/cakeImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/cake"
                            android:layout_weight="0"/>

                        <TextView
                            android:id="@+id/ageText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:layout_gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginLeft="@dimen/grid_size_half"
                            android:layout_marginStart="@dimen/grid_size_half"/>

                        <TextView
                            android:id="@+id/yearsOldText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/years"
                            android:layout_weight="0"
                            android:layout_gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                    </LinearLayout>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/maritalStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/male_female"
                        app:text="@string/single"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/hobbiesText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hobbies"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/design"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/palette"
                        app:text="@string/design"
                        android:layout_marginTop="@dimen/grid_size"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/psychology"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/face"
                        app:text="@string/psychology"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/vocal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/microphone"
                        app:text="@string/vocal"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_size_half"
                app:contentPadding="@dimen/grid_size"
                app:cardElevation="@dimen/card_view_elevation">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/contactsText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contacts"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/email"
                        app:text="@string/mail"
                        android:layout_marginTop="@dimen/grid_size"/>

                    <com.dyvoker.androidresume.ui.IconTextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconBeforeText="@drawable/phone"
                        app:text="@string/phone_number"
                        android:layout_marginTop="@dimen/grid_size_half"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
